src/cli/snapshots/ironclaw__cli__tests__long_help_output_without_import.snap
---
source: src/cli/mod.rs
expression: help
---
IronClaw is a secure AI assistant. Use 'ironclaw <subcommand> --help' for details.
Examples:
  ironclaw run  # Start the agent
  ironclaw config list  # List configs

Usage: ironclaw [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  cron        Manage cron routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  doctor      Run diagnostics
  status      Show system status
  completion  Generate completions
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
